src/test/ui/issues/issue-35668.stderr
error[E0369]: cannot multiply `&T` to `&T`
  --> $DIR/issue-35668.rs:2:23
   |
LL |     a.iter().map(|a| a*a)
   |                      -^- &T
   |                      |
   |                      &T

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
